# long-range-teleoperation-robot-side

1_Drive_Routine/: CMakeLists.txt  README.md  package.xml
1_Drive_Routine/src/: visMain (copy).cpp  visMain.cpp
2_ORB_SLAM_Pub/: orb_SLAM_pub_cmd
3_Calibration_Solver/: CMakeLists.txt  package.xml  result.txt
3_Calibration_Solver/dataset/: data_backup.txt  results.txt
3_Calibration_Solver/include/: keyFrame.h
3_Calibration_Solver/lib/: chris_ICP.cpp  keyFrame.cpp  pair_solver.cpp
3_Calibration_Solver/src/: solver.cpp
4_UDP_Client_Robot/: CMakeLists.txt  img2str.py  package.xml
4_UDP_Client_Robot/src/: main.cpp
5_Large_Motion_Control/: CMakeLists.txt  package.xml
5_Large_Motion_Control/include/: math_helper.h  pose_helper.h  string_convertor.h
5_Large_Motion_Control/lib/: CMakeLists.txt  pose_helper.cpp  string_convertor.cpp
5_Large_Motion_Control/src/: main.cpp
7_Baseline_Control/: CMakeLists.txt  README.md  package.xml
7_Baseline_Control/include/: string_convertor.h
7_Baseline_Control/lib/: CMakeLists.txt  math_helper.cpp  string_convertor.cpp
7_Baseline_Control/src/: main.cpp
Prev 5_Large_Motion_Control/: CMakeLists.txt  package.xml
Prev 5_Large_Motion_Control/src/: main.cpp
