<?xml version="1.0"?>
<package>
  <name>teleop_wam_baseline</name>
  <version>0.0.0</version>
  <description>keyboard based teaching interface for jaco arm</description>
  <maintainer email="jjin5@ualberta.ca">junjin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

<build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

<build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>opencv</build_depend>
  <run_depend>opencv</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>

   <build_depend>sdl</build_depend>
   <run_depend>sdl</run_depend>

   <build_depend>pluginlib</build_depend>
     <build_depend>moveit_core</build_depend>
     <build_depend>moveit_ros_planning_interface</build_depend>
     <build_depend>moveit_ros_perception</build_depend>

     <build_depend>cmake_modules</build_depend>

     <run_depend>pluginlib</run_depend>
     <run_depend>moveit_core</run_depend>
     <run_depend>moveit_fake_controller_manager</run_depend>
     <run_depend>moveit_ros_planning_interface</run_depend>
     <run_depend>moveit_ros_perception</run_depend>
 <build_depend>wam_chris_moveit_package</build_depend>
 <run_depend>wam_chris_moveit_package</run_depend>

<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
